--- a/css/style.css
+++ b/css/style.css
@@ -768,7 +768,7 @@
 
 .css-code-box{
 	max-width: 500px;
-	height: 400px;
+	max-height: 400px;
 	overflow-y: auto;
 	font-size: 18px;
 	color:#232323;
@@ -776,9 +776,9 @@
 	margin-top:20px;
 	background: #f3f3f3;
     border-radius: 4px;
-    -webkit-box-shadow: inset 0 10px 25px #d3d3d3;
-    -moz-box-shadow: inset 0 10px 25px #d3d3d3;
-    box-shadow: inset 0 10px 25px #d3d3d3;
+    -webkit-box-shadow: inset 0 10px 35px #a3a3a3;
+    -moz-box-shadow: inset 0 10px 35px #a3a3a3;
+    box-shadow: inset 0 10px 35px #a3a3a3;
 }
 
 code{font-size: 15px;}
