--- a/css/samanira.css
+++ b/css/samanira.css
@@ -1,4 +1,10 @@
-﻿/* -- _Classes in Form -- */
+﻿.sample-box textarea{
+	display: block;
+	height: 100px;
+	margin:0;
+}
+
+/* -- _Classes in Form -- */
 
 .form-field-holder{
 	position: relative;
@@ -28,8 +34,8 @@
 
 .textarea-word-tracker span{
 	position: absolute;
-	bottom:15px;
-	right:15px;
+	bottom:5px;
+	right:10px;
 	display: inline-block;
 	font-size: 15px;
 }
