--- a/css/samanira.css
+++ b/css/samanira.css
@@ -117,8 +117,8 @@
 	display: inline-block;
 	font-family: 'Effra-light';
 	font-size: 16px;
-	color: #686b6d;
-	padding:4px 0 4px 42px;
+	color: #ffffff;
+	padding:2.5px 0 4px 40px;
 	margin:0;
 	cursor: pointer;
 }
@@ -131,7 +131,6 @@
 	width: 25px;
 	height: 25px;
 	background-color: #ffffff;
-	border:1px solid #121212;
 	border-radius: 2px;
 }
 
@@ -158,7 +157,6 @@
 	width: 25px;
 	height: 25px;
 	background-color: #ffffff;
-	border:1px solid #121212;
 	border-radius: 50%;
 	-webkit-transition:all .2s ease-in-out;
 	-moz-transition:all .2s ease-in-out;
@@ -173,7 +171,7 @@
 	width:13px;
 	height: 13px;
 	opacity: 0;
-	background-color: #121212;
+	background-color: #0a9abd;
 	border-radius: 50%;
 	-webkit-transition:all .2s ease-in-out;
 	-moz-transition:all .2s ease-in-out;
