--- a/css/samanira.css
+++ b/css/samanira.css
@@ -202,7 +202,7 @@
 a.remove{
 	position: absolute;
     top: 6px;
-    right: 6px;
+    left: 6px;
     display: block;
     width: 28px;
     height: 28px;
@@ -308,13 +308,9 @@ a.remove{
 	background: url('../images/icons/switch.png') no-repeat center;
 }
 
-.switch.on{background-image: url('../images/icons/switch-on.png');}
+.switch.active{background-image: url('../images/icons/switch-on.png');}
 
 .nav-toggle{
-    position: absolute;
-    left: 30px;
-    top: 30px;
-    display: none;
     width: 30px;
     height: 21px;
     text-align: center;
@@ -385,6 +381,11 @@ a.remove{
 /********************
 ****** #COMMON ******
 *********************/
+
+.white-bg{background-color: #ffffff;}
+.black-bg{background-color: #000000;}
+.site-bg{background-color: #0a9abd;}
+.site-2-bg{background-color: #f55757;}
 
 .auto-width{width: auto;}
 .full-width{width: 100% !important;}
@@ -740,6 +741,7 @@ a.close{
 	position: absolute;
 	top:10px;
 	left:10px;
+	display: block;
 	width: 10px;
 	height: 10px;
 	background: url('../images/assets/close.png') no-repeat center;
