all codes entered in samanira page

--- a/css/style.css
+++ b/css/style.css
@@ -796,6 +796,7 @@ code{font-size: 15px;}
 
 .selector{color:#0a9abd;}
 .code-item{color:#f55757;}
+.code-item-2{color:#61bd61;}
 
 .sample-box{
 	position: relative;
