--- a/css/samanira.css
+++ b/css/samanira.css
@@ -214,7 +214,7 @@ a.remove{
 .bttn{
 	position: relative !important;
 	display: inline-block !important;
-	min-width: 150px !important;
+	min-width: 155px !important;
 	font-size: 16px !important;
 	color:#ffffff !important;
 	text-align: center !important;
@@ -1515,13 +1515,13 @@ a.close{
 	.bttn{
 		min-width: 120px;
 		font-size: 14px;
-		padding:8px 14px;
+		padding:8px;
 	}
 
 	.bttn.large{
-		min-width: 200px;
+		min-width: 150px;
 		font-size: 16px;
-		padding:12px 18px;
+		padding:10px;
 	}
 
 	.font-size-vlarge{font-size: 25px;}
